// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchGroupTopics": [Function],
  "selectGroup": [Function],
  "setTerm": [Function],
  "setTopicSubscribe": [Function],
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "group": undefined,
  "groupHasTopics": false,
  "filteredTopics": Array [],
  "network": undefined,
  "pending": true,
  "searchTerm": undefined,
}
`;

exports[`mergeProps sets up functions 1`] = `
Object {
  "group": Object {
    "id": 132,
  },
  "fetchGroupTopics": [Function],
  "goToTopic": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "setTopicSubscribe": [Function],
}
`;
